--- a/BoxSDKResources/BoxSDKResources-Info.plist
+++ b/BoxSDKResources/BoxSDKResources-Info.plist
@@ -4,7 +4,7 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
-	<key>CFBundleExecutable</key>
+	<key>CFBundlePackageType</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
 	<string></string>
